--- a/layout/blog.css
+++ b/layout/blog.css
@@ -28,11 +28,13 @@
   -moz-box-flex: 1;
   -ms-flex: 1;
   flex: 1;
+
+  padding: 0 1rem;
 }
 
 .Blog-content {
   margin: 1.5em 0;
-  padding: 1.5rem 2rem 6rem 2rem;
+  padding: 2rem 2rem 6rem 2rem;
 }
 
 .Blog-nav, .Blog-aside {
@@ -41,7 +43,7 @@
 }
 
 .Blog-nav {
-  font-family: 'PT Sans', sans-serif;
+  line-height: 2em;
 }
 
 .Blog-nav-list {
@@ -58,9 +60,9 @@
 }
 
 .Header {
-  padding: 1em;
+  padding: 1em .5em .5em 1em;
   text-align: center;
-  font-family: 'PT Sans', sans-serif;
+  line-height: 1em;
 }
 
 .Header-logo, .Header-title, .Header-subTitle {
@@ -71,7 +73,6 @@
 }
 
 .Header-logo {
-  font-size: 2.4rem;
   float: left;
   margin-right: 1rem;
   margin-top: -.33rem;
@@ -80,7 +81,7 @@
 .Header-title {
   margin: 0;
   font-size: 2.4em;
-  line-height: 1em;
+  line-height: 1.5em;
   word-spacing: .08em;
   float: left;
 }
@@ -90,11 +91,11 @@
   white-space: nowrap;
   text-align: right;
   float: right;
+  font-size: .85em;
 }
 
 .Footer {
   padding: 1.5rem 1.5rem 3rem 1.5rem;
-  font: 'PT Sans', sans-serif;
 }
 
 .Footer-credits {
@@ -136,10 +137,14 @@
     -ms-flex: 1;
     flex: 1;
     -ms-flex-preferred-size: auto;
+
+    padding: 0 3rem;
   }
 
   .Blog-content {
     margin: 0;
+    padding-left: 4rem;
+    padding-right: 3rem;
   }
 
   .Blog-nav, .Blog-aside {
@@ -152,14 +157,19 @@
   }
 
   .Blog-nav {
-    padding-left: 6rem;
-
-    /* put the nav on the left */
+    /* put the nav on the right */
     -webkit-box-ordinal-group: 0;
-    -webkit-order: -1;
+    -webkit-order: 1;
     -moz-box-ordinal-group: 0;
-    -ms-flex-order: -1;
-    order: -1;
+    -ms-flex-order: 1;
+    order: 1;
+
+    padding-left: 3rem;
+    padding-top: 2.25rem;
+  }
+
+  .Header {
+    padding: 1rem 4.75rem .5rem 3rem;
   }
 
   .Header--cozy, .Header--cozy .Header-titles {
@@ -171,37 +181,43 @@
   }
 
   .Header--cozy {
-    padding: .8rem;
     -webkit-box-align: center;
     -webkit-align-items: center;
     align-items: center;
   }
 
   .Header-title {
-    font-size: 3.6em;
+    font-size: 1.5em;
   }
 
   .Header--cozy .Header-title {
-    font-size: 2em;
+    font-size: 1.5em;
   }
 }
 
 /* Utilities */
 
-.u-textCenter {
-  text-align: center!important;
+/* Text */
+
+.u-serif {
+  font-family: 'Georgia', serif;
+  font-style: normal;
+  font-weight: normal;
 }
 
 .u-textLeft {
   text-align: left!important;
 }
 
-.u-ltGrayBkg {
-  background-color: #F5F4F1;
+.u-sansSerif {
+  font-family: 'outageregular', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  -webkit-font-kerning: normal;
 }
 
-.u-mdGrayBkg {
-  background-color: #E7E4DC;
+.u-textCenter {
+  text-align: center!important;
 }
 
 .u-whiteTxt,
@@ -211,21 +227,27 @@
   color: white;
 }
 .u-whiteTxt a {
-  border-bottom: 1px dashed rgba(255, 255, 255,.5);
+  border-bottom: 1px dashed rgba(255, 255, 255, .5);
 }
 
-.u-ltGrayText,
-.u-ltGrayText a,
-.u-ltGrayText a:active,
-.u-ltGrayText a:hover {
-  color: #ccc;
+.u-blackTxt,
+.u-blackTxt a,
+.u-blackTxt a:active,
+.u-blackTxt a:hover {
+  color: black;
+}
+.u-blackTxt a {
+  border-bottom: 1px dashed rgba(0, 0, 0, .5);
 }
 
-.u-dkGrayTxt,
-.u-dkGrayTxt a,
-.u-dkGrayTxt a:active,
-.u-dkGrayTxt a:hover {
-  color: #546578;
+.u-grayText,
+.u-grayText a,
+.u-grayText a:active,
+.u-grayText a:hover {
+  color: #d2d2d2;
+}
+.u-grayText a {
+  border-bottom: 1px dashed #d2d2d2;
 }
 
 .u-yellowTxt,
@@ -268,14 +290,84 @@
   border-bottom: 1px dashed #e81e25;
 }
 
+/* Borders */
+
+.u-blueBotBorder {
+  border-bottom: 4px dotted #0082be;
+}
+
+.u-whiteTopBorder {
+  border-top: 4px dotted #fff;
+}
+
+.u-whiteLtBorder {
+  border-left: 4px dotted #fff;
+}
+
+.u-grayLtBorder {
+  border-left: 4px dotted #d2d2d2;
+}
+
+.u-grayRtBorder {
+  border-right: 4px dotted #d2d2d2;
+}
+
+/* Backgrounds */
+
+.u-grayBkg {
+  background-color: #d2d2d2;
+}
+
+.u-ltBlueBkg {
+  background-color: #E3EAF1;
+}
+
+.u-blueBkg {
+  background-color: #0082be;
+}
+
+.u-whiteBkg {
+  background-color: #ffffff;
+}
+
+/* Boxes */
+
 .u-rounded {
   -webkit-border-radius: 1rem;
   -moz-border-radius: 1rem;
   border-radius: 1rem;
 }
 
+/* Button */
 
-/* clear fix */
+.button {
+  background: #d2d2d2;
+  display: inline-block;
+  padding: .4em .8em;
+  margin-right: .5em;
+  text-decoration: none;
+  color: #444444;
+  border: none;
+  -webkit-transition: background-color 0.5s;
+  -moz-transition: background-color 0.5s;
+  -o-transition: background-color 0.5s;
+  transition: background-color 0.5s;
+
+  -webkit-border-radius: 1rem;
+  -moz-border-radius: 1rem;
+  border-radius: 1rem;
+}
+a.button {
+  border: none;
+}
+
+.button:hover {
+  background: #0082be;
+  text-shadow: none;
+  color: #ffffff!important;
+}
+
+/* Clear fix */
 .u-cf:before,
 .u-cf:after {
   content: " ";
@@ -293,23 +385,21 @@
   box-sizing: border-box;
 }
 
-html,
-body {}
 html {
   font-size: 62.5%;
 }
 body {
-  font-family: 'PT Serif', serif;
-  font-style: normal;
-  font-weight: 400;
   font-size: 1.8rem;
   margin: 0;
+  padding 0;
 }
 
-h1, h2, h3 {
-  font-family: 'PT Sans', sans-serif;
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'outageregular', sans-serif;
   font-style: normal;
   -webkit-font-kerning: normal;
+
+  color: #f39f2b; /* yellow */
 }
 h1, h2 {
   margin: 0 0 1rem 0;
@@ -338,4 +428,8 @@ footer {
 
 a, a:link, a:hover, a:visited, a:active {
   text-decoration: none;
+}
+
+strong {
+  color: #0082be; /* blue */
 }
