--- a/client/app/templates/application.hbs
+++ b/client/app/templates/application.hbs
@@ -1,33 +1,34 @@
-<header class="Header Header--cozy u-ltGrayBkg">
-  <div class="Box u-blueTxt u-cf">
+<header class="Header Header--cozy u-sansSerif u-blueBotBorder u-whiteBkg">
+  <div class="Box u-cf">
     {{#link-to 'index'}}
       <img class="Header-logo" src="http://pixelhandler.com/images/pixelhandler-logo.png">
     {{/link-to}}
-    <div class="Header-title">
+    <div class="Header-title u-blueTxt">
       {{#link-to 'index'}}Pixelhandler{{/link-to}}
     </div>
-    <div class="Header-subTitle">
+    <div class="Header-subTitle u-grayText">
       Pushin&apos; &amp; pullin&apos; pixels on the web
     </div>
   </div>
 </header>
 
-<div class="Blog-body">
-  <main class="Blog-content">
-    <article class="Box u-dkGrayTxt">
+<div class="Blog-body u-grayBkg">
+  <main class="Blog-content u-blackTxt u-whiteBkg u-grayLtBorder">
+    <article class="Box">
       {{outlet}}
     </article>
   </main>
 
-  <nav class="Blog-nav u-yellowTxt">
+  <nav class="Blog-nav u-blueTxt u-ltBlueBkg u-grayRtBorder u-whiteLtBorder u-sansSerif">
     <ul class="Blog-nav-list">
       <li class="Blog-nav-list-item">{{#link-to 'index'}}Blog{{/link-to}}</li>
       <li class="Blog-nav-list-item">{{#link-to 'posts'}}Archive{{/link-to}}</li>
       <li class="Blog-nav-list-item">{{#link-to 'about'}}About{{/link-to}}</li>
     </ul>
+    {{outlet "recent"}}
   </nav>
 </div>
 
-<footer class="Footer u-blueTxt u-textCenter u-mdGrayBkg">
-  <p class="Footer-credits">The End.</p>
+<footer class="Footer u-sansSerif u-whiteTxt u-textCenter u-blueBkg u-whiteTopBorder">
+  <p class="Footer-credits">The End. [Personal blog of Bill Heaton]</p>
 </footer>
