--- a/client/app/templates/post.hbs
+++ b/client/app/templates/post.hbs
@@ -6,7 +6,7 @@
 {{/if}}
 
 <h1>{{title}}</h1>
-<h2>by {{author.name}} <small class='muted'>({{format-date date}})</small></h2>
+<small>by {{author.name}} ({{format-date date}})</small>
 
 <hr>
 
