--- a/client/app/stylesheets/components.css
+++ b/client/app/stylesheets/components.css
@@ -28,18 +28,13 @@
   -moz-box-flex: 1;
   -ms-flex: 1;
   flex: 1;
+
+  padding: 0 1rem;
 }
 
 .Blog-content {
   margin: 1.5em 0;
-  padding: 1.5rem 2rem 6rem 2rem;
-}
-.Blog-content a,
-.Blog-content a:active,
-.Blog-content a:hover,
-.Blog-content strong {
-  color: #0082be;
-  border-bottom: 1px dashed #0082be;
+  padding: 2rem 2rem 6rem 2rem;
 }
 
 .Blog-nav, .Blog-aside {
@@ -48,7 +43,7 @@
 }
 
 .Blog-nav {
-  font-family: 'PT Sans', sans-serif;
+  line-height: 2em;
 }
 
 .Blog-nav-list {
@@ -65,9 +60,9 @@
 }
 
 .Header {
-  padding: 1em;
+  padding: 1em .5em .5em 1em;
   text-align: center;
-  font-family: 'PT Sans', sans-serif;
+  line-height: 1em;
 }
 
 .Header-logo, .Header-title, .Header-subTitle {
@@ -78,7 +73,6 @@
 }
 
 .Header-logo {
-  font-size: 2.4rem;
   float: left;
   margin-right: 1rem;
   margin-top: -.33rem;
@@ -87,9 +81,13 @@
 .Header-title {
   margin: 0;
   font-size: 2.4em;
-  line-height: 1em;
+  line-height: 1.5em;
   word-spacing: .08em;
   float: left;
+}
+
+.Header .u-blueTxt a {
+  border-bottom: none;
 }
 
 .Header-subTitle {
@@ -97,11 +95,11 @@
   white-space: nowrap;
   text-align: right;
   float: right;
+  font-size: .85em;
 }
 
 .Footer {
   padding: 1.5rem 1.5rem 3rem 1.5rem;
-  font: 'PT Sans', sans-serif;
 }
 
 .Footer-credits {
@@ -143,10 +141,14 @@
     -ms-flex: 1;
     flex: 1;
     -ms-flex-preferred-size: auto;
+
+    padding: 0 3rem;
   }
 
   .Blog-content {
     margin: 0;
+    padding-left: 4rem;
+    padding-right: 3rem;
   }
 
   .Blog-nav, .Blog-aside {
@@ -159,14 +161,19 @@
   }
 
   .Blog-nav {
-    padding-left: 6rem;
-
-    /* put the nav on the left */
+    /* put the nav on the right */
     -webkit-box-ordinal-group: 0;
-    -webkit-order: -1;
+    -webkit-order: 1;
     -moz-box-ordinal-group: 0;
-    -ms-flex-order: -1;
-    order: -1;
+    -ms-flex-order: 1;
+    order: 1;
+
+    padding-left: 3rem;
+    padding-top: 2.25rem;
+  }
+
+  .Header {
+    padding: 1rem 4.75rem .5rem 3rem;
   }
 
   .Header--cozy, .Header--cozy .Header-titles {
@@ -178,17 +185,16 @@
   }
 
   .Header--cozy {
-    padding: .8rem;
     -webkit-box-align: center;
     -webkit-align-items: center;
     align-items: center;
   }
 
   .Header-title {
-    font-size: 3.6em;
+    font-size: 1.5em;
   }
 
   .Header--cozy .Header-title {
-    font-size: 2em;
+    font-size: 1.5em;
   }
 }
