--- a/client/app/templates/posts.hbs
+++ b/client/app/templates/posts.hbs
@@ -1,19 +1,6 @@
-<div class="container-fluid">
-  <div class="row-fluid">
-    <div class="span3">
-      <table class='table'>
-        <thead>
-          <tr><th>Recent Posts</th></tr>
-        </thead>
-        {{#each model}}
-        <tr><td>
-            {{#link-to 'post' this}}{{title}} <small class='muted'>by {{author.name}}</small>{{/link-to}}
-        </td></tr>
-        {{/each}}
-      </table>
-    </div>
-    <div class="span9">
-      {{outlet}}
-    </div>
-  </div>
-</div>
+<h4>Recent Posts</h4>
+<ul class="Blog-nav-list">
+  {{#each model}}
+    <li class="Blog-nav-list-item">{{#link-to 'post' this}}{{title}}{{/link-to}}</li>
+  {{/each}}
+</ul>
