--- a/client/app/templates/application.hbs
+++ b/client/app/templates/application.hbs
@@ -20,12 +20,13 @@
   </main>
 
   <nav class="Blog-nav u-blueTxt u-ltBlueBkg u-grayRtBorder u-whiteLtBorder u-sansSerif">
+    {{outlet "recent"}}
+    <h4>Links</h4>
     <ul class="Blog-nav-list">
       <li class="Blog-nav-list-item">{{#link-to 'index'}}Blog{{/link-to}}</li>
       <li class="Blog-nav-list-item">{{#link-to 'posts'}}Archive{{/link-to}}</li>
       <li class="Blog-nav-list-item">{{#link-to 'about'}}About{{/link-to}}</li>
     </ul>
-    {{outlet "recent"}}
   </nav>
 </div>
 
