Update tests after template changes

--- a/client/app/templates/post.hbs
+++ b/client/app/templates/post.hbs
@@ -6,7 +6,10 @@
 {{/if}}
 
 <h1>{{title}}</h1>
-<small>by {{author.name}} ({{format-date date}})</small>
+<small>
+  <span class="author">by {{author.name}}</span>&nbsp;
+  <span class="date">({{format-date date}})</span>
+</small>
 
 <hr>
 
