--- a/client/app/templates/application.hbs
+++ b/client/app/templates/application.hbs
@@ -20,7 +20,8 @@
   </main>
 
   <nav class="Blog-nav u-blueTxt u-ltBlueBkg u-grayRtBorder u-whiteLtBorder u-sansSerif">
-    {{outlet "recent"}}
+    {{!outlet "recent"}}
+    {{render "recent" this}}
     <h4>Links</h4>
     <ul class="Blog-nav-list">
       <li class="Blog-nav-list-item">{{#link-to 'index'}}Blog{{/link-to}}</li>
