--- a/client/app/templates/posts.hbs
+++ b/client/app/templates/posts.hbs
@@ -1,6 +1,1 @@
-<h4>Recent Posts</h4>
-<ul class="Blog-nav-list">
-  {{#each model}}
-    <li class="Blog-nav-list-item">{{#link-to 'post' this}}{{title}}{{/link-to}}</li>
-  {{/each}}
-</ul>
+{{outlet}}
