--- a/client/app/templates/recent.hbs
+++ b/client/app/templates/recent.hbs
@@ -1,4 +1,4 @@
-<h4>Posts Archive</h4>
+<h4>Recent Posts</h4>
 <ul class="Blog-nav-list">
   {{#each model}}
     <li class="Blog-nav-list-item">{{#link-to 'post' this}}{{title}}{{/link-to}}</li>
