--- a/client/app/templates/post.hbs
+++ b/client/app/templates/post.hbs
@@ -8,7 +8,7 @@
 <h1>{{title}}</h1>
 <small>
   <span class="author">by {{author.name}}</span>&nbsp;
-  <span class="date">({{format-date date}})</span>
+  <span class="date">({{format-date-from-now date}})</span>
 </small>
 
 <hr>
