--- a/client/app/templates/about.hbs
+++ b/client/app/templates/about.hbs
@@ -1,18 +1,30 @@
-<div class='about'>
-  <p>Yehuda Katz is a member of the <a href="http://emberjs.com">Ember.js</a>, <a href="http://rubyonrails.org">Ruby on Rails</a>
-  and <a href="http://www.jquery.com">jQuery</a> Core Teams; he spends his daytime hours at the startup he founded,
-  <a href="http://www.tilde.io">Tilde Inc.</a>.</p>
-  <p>Yehuda is co-author of best-selling <a href="http://affiliate.manning.com/idevaffiliate.php?id=485_176">jQuery in Action</a> and
-  <a href="http://affiliate.manning.com/idevaffiliate.php?id=485_145">Rails 3 in Action</a>.</p>
-  <p>He spends most of his time hacking on open source—his main projects, along with others, like <a href="https://github.com/wycats/thor">Thor</a>,
-  <a href="http://www.handlebarsjs.com">Handlebars</a> and <a href="https://github.com/carlhuda/janus">Janus</a>—or traveling the world doing evangelism work.</p>
-  <p>He can be found on Twitter as <a href="http://www.twitter.com/wycats">@wycats</a>.</p>
-</div>
+<section class="Blog-about">
+  <h1>About</h1>
 
-<div class='about'>
-  <p>My name is Tom Dale. I helped create <a href="http://www.emberjs.com/">Ember.js</a>, a JavaScript framework that brings sanity to the web.</p>
+  <p>
+    My name is Bill Heaton, I am a freelance developer who loves the Web platform
+    and the growth of mobile devices with great browsers.
+    I enjoy building with open source, using Linux and developing with Ember.js and 
+    Ruby on Rails frameworks; I also dig using (node.js) Express for an API.
+    My favorite text editor(s): Vim and MacVim.
+  </p>
 
-  <p>In October of 2011, I co-founded <a href="http://www.tilde.io">Tilde</a> with Yehuda Katz, Leah Silber and Carl Lerche.</p>
+  <ul>
+    <li><em>Specialties</em>: JavaScript, CSS, HTML, Ember.js, Ruby on Rails, Node.js</li>
+    <li><em>Favorite open source project</em>: Ember.js</li>
+    <li><em>Employment</em>: Freelance Developer – Working on apps built with Ember.js</li>
+  </ul>
 
-  <p>In my spare time I run a cash-for-beer exchange program at many local San Francisco dive bars.</p>
-</div>
+  <p>This is my personal blog site, pixelhander.com</p>
+
+  <p><em>Contact:</em><br>
+  Follow <a href="https://twitter.com/#!/pixelhandler">@pixelhandler</a> on Twitter<br>
+  Connect at <a href="http://www.linkedin.com/in/billheaton">LinkedIn</a><br>
+  Email to bill [at] my domain<br>
+  Voicemail: 1-714-512-2215 (Google Voice)<br></p>
+
+  <p>Or, snail mail at:<br>
+  Bill Heaton<br>
+  PO Box 7814<br>
+  Norco, CA 92860</p>
+</section>
