--- a/client/app/templates/links.hbs
+++ b/client/app/templates/links.hbs
@@ -1,4 +1,4 @@
-<h4>Links</h4>
+<h4 class="u-medGrayText">Links</h4>
 <ul class="Blog-nav-list">
   <li class="Blog-nav-list-item">{{#link-to 'index'}}Blog{{/link-to}}</li>
   <li class="Blog-nav-list-item">{{#link-to 'posts'}}Archive{{/link-to}}</li>
