--- a/client/app/templates/about.hbs
+++ b/client/app/templates/about.hbs
@@ -20,7 +20,7 @@
   <p><em>Contact:</em><br>
   Follow <a href="https://twitter.com/#!/pixelhandler">@pixelhandler</a> on Twitter<br>
   Connect at <a href="http://www.linkedin.com/in/billheaton">LinkedIn</a><br>
-  Email to bill [at] my domain<br>
+  Email to pixelhandler [at] Gmail<br>
   Voicemail: 1-714-512-2215 (Google Voice)<br></p>
 
   <p>Or, snail mail at:<br>
