--- a/client/app/templates/application.hbs
+++ b/client/app/templates/application.hbs
@@ -26,5 +26,5 @@
 </div>
 
 <footer class="Footer u-sansSerif u-medGrayText u-textCenter u-blackBkg u-grayTopBorder">
-  <p class="Footer-credits">The End. [Personal blog of Bill Heaton]</p>
+  <p class="Footer-credits">The End. <small>[Personal blog, Copyright @2014 Bill Heaton]</small></p>
 </footer>
