--- a/client/app/templates/application.hbs
+++ b/client/app/templates/application.hbs
@@ -20,11 +20,22 @@
   </main>
 
   <nav class="Blog-nav u-blackTxt u-grayBkg u-offWhiteLtBorder u-sansSerif">
+    {{#if isAdmin}}
+      {{partial "admin/menu"}}
+    {{/if}}
     {{render "recent" this}}
     {{partial "links"}}
   </nav>
 </div>
 
-<footer class="Footer u-sansSerif u-medGrayText u-textCenter u-blackBkg u-grayTopBorder">
-  <p class="Footer-credits">The End. <small>[Personal blog, Copyright @2014 Bill Heaton]</small></p>
+<footer class="Footer u-sansSerif u-medGrayTxt u-textCenter u-blackBkg u-grayTopBorder">
+  <p class="Footer-credits">
+    The End. <small>[Personal blog, Copyright @2014 Bill Heaton] |
+    {{#unless isAdmin}}
+      <span {{action "enableAdmin"}} class="u-grayTxt u-clickable">Admin</span>
+    {{else}}
+      <span {{action "disableAdmin"}} class="u-grayTxt u-clickable">Exit Admin</span>
+    {{/unless}}
+    </small>
+  </p>
 </footer>
