--- a/client/app/templates/admin/index.hbs
+++ b/client/app/templates/admin/index.hbs
@@ -2,8 +2,10 @@
 <dl class="Blog-list">
   {{#each model}}
     <dt class="Blog-list-date">{{format-date date}}</dt>
-    <dd class="Blog-list-link u-cf">
-      {{#link-to "admin.edit" this}}{{title}}{{/link-to}}
+    <dd class="Blog-list-item u-cf">
+      <span class="Blog-list-item-title">{{title}}</span>
+      {{#link-to "admin.edit" this class="u-button u-button--sm u-edit"}}Edit{{/link-to}}
+      <button class="u-button u-button--sm u-destroy" {{action "destroy" this}}>Delete</button>
     </dd>
   {{/each}}
 </dl>
