--- a/client/app/templates/admin/create.hbs
+++ b/client/app/templates/admin/create.hbs
@@ -8,7 +8,7 @@
   <hr>
   {{partial 'admin/form'}}
 {{else}}
-  <button {{action 'edit'}} class="u-button">Edit</button>
+  <button {{action 'edit'}} class="u-button u-edit">Edit</button>
   <hr>
 
   {{partial 'admin/preview'}}
