minor template changes

--- a/client/app/templates/application.hbs
+++ b/client/app/templates/application.hbs
@@ -6,7 +6,7 @@
     <div class="Header-title u-whiteTxt">
       {{#link-to 'index'}}Pixelhandler{{/link-to}}
     </div>
-    <div class="Header-subTitle u-medGrayText">
+    <div class="Header-subTitle u-medGrayTxt">
       Pushin&apos; &amp; pullin&apos; pixels on the web
     </div>
   </div>
