--- a/client/app/stylesheets/components.css
+++ b/client/app/stylesheets/components.css
@@ -57,9 +57,10 @@
 
 .Blog-nav-list-item {
   list-style: none;
-  margin: 0;
+  margin: 0 0 2rem;
   padding: 0;
-  line-height: 2em;
+  line-height: 1.5em;
+  font-size: .85em;
 }
 
 .Blog-excerpt {}
