--- a/client/app/templates/index.hbs
+++ b/client/app/templates/index.hbs
@@ -2,7 +2,7 @@
   <div class="Blog-excerpt">
     <h3 class="Blog-excerpt-title u-yellowTxt">{{#link-to 'post' this}}{{title}}{{/link-to}}</h3>
     <section class="Blog-excerpt-summary">
-      {{excerpt}}
+      {{format-markdown excerpt}}
     </section>
     {{#link-to "post" this class="u-button"}}Read on →{{/link-to}}
   </div>
