--- a/client/app/templates/admin/edit.hbs
+++ b/client/app/templates/admin/edit.hbs
@@ -9,6 +9,7 @@
   {{partial 'admin/form'}}
 {{else}}
   <button {{action 'edit'}} class="u-button u-edit">Edit</button>
+  <button {{action 'cancel'}} class="u-button u-cancel">Cancel</button>
   <hr>
 
   {{partial 'admin/preview'}}
