--- a/client/app/templates/admin/index.hbs
+++ b/client/app/templates/admin/index.hbs
@@ -4,8 +4,8 @@
     <dt class="Blog-list-date">{{format-date date}}</dt>
     <dd class="Blog-list-item u-cf">
       <span class="Blog-list-item-title">{{title}}</span>
-      {{#link-to "admin.edit" this class="u-button u-button--sm u-edit"}}Edit{{/link-to}}
-      <button class="u-button u-button--sm u-destroy" {{action "destroy" this}}>Delete</button>
+      {{#link-to "admin.edit" this class="u-button u-button--sm u-button--reverse u-edit"}}Edit{{/link-to}}
+      <button class="u-button u-button--sm u-button--reverse u-destroy" {{action "destroy" this}}>Delete</button>
     </dd>
   {{/each}}
 </dl>
