--- a/client/app/templates/post.hbs
+++ b/client/app/templates/post.hbs
@@ -2,6 +2,11 @@
 <small>
   <span class="author">by {{author.name}}</span>&nbsp;
   <span class="date">({{format-date-from-now date}})</span>
+  {{#if isLoggedIn}}
+    <span class="edit">
+      {{#link-to "admin.edit" this class="u-button u-button--sm u-button--reverse u-edit"}}Edit{{/link-to}}
+    </span>
+  {{/if}}
 </small>
 
 <hr>
