--- a/client/app/stylesheets/elements.css
+++ b/client/app/stylesheets/elements.css
@@ -68,6 +68,10 @@ strong {
   color: #0082be; /* blue */
 }
 
+small {
+  font-size: 1.1rem;
+}
+
 pre, code {
   border: 1px solid #292929;
   border-radius: 6px;
@@ -101,6 +105,9 @@ code {
   }
   p, li, dt, dd {
     line-height: 1.8em;
+  }
+  small {
+    font-size: .75em;
   }
   code {
     font-size: 1.5rem;
