Add app serializer that switches id w/ slug

--- a/client/app/templates/index.hbs
+++ b/client/app/templates/index.hbs
@@ -1,6 +1,8 @@
 {{#each model}}
   <div class="Blog-excerpt">
-    <h3 class="Blog-excerpt-title u-yellowTxt">{{#link-to 'post' this}}{{title}}{{/link-to}}</h3>
+    <h3 class="Blog-excerpt-title u-yellowTxt">
+      {{#link-to 'post' this}}{{title}}{{/link-to}}
+    </h3>
     <section class="Blog-excerpt-summary">
       {{format-markdown excerpt}}
     </section>
