Adapt client tests to use slug instead of id
- Use enter to submit admin login form

--- a/client/app/stylesheets/components.css
+++ b/client/app/stylesheets/components.css
@@ -131,6 +131,15 @@
   padding: 0;
 }
 
+.Footer-form {}
+
+.Footer-form-button {
+  background: none;
+  border: none;
+  font-size: 1em;
+  font-family: 'outageregular', sans-serif;
+}
+
 .Box {
   width: 100%;
   padding: .5rem;
