Add Date input for creating new post

--- a/client/app/templates/admin/form.hbs
+++ b/client/app/templates/admin/form.hbs
@@ -10,6 +10,11 @@
       <br>
       {{input type="text" value=slug name="slug"}}
     </p>
+    <p class="Admin-form-date">
+      <label>Date:</label>
+      <br>
+      {{input type="date" value=date name="date"}}
+    </p>
   {{/if}}
   <p class="Admin-form-excerpt">
     <label>Excerpt: [Markdown]</label>
