Date input and date serializer fixes

--- a/client/app/templates/admin/form.hbs
+++ b/client/app/templates/admin/form.hbs
@@ -13,7 +13,7 @@
     <p class="Admin-form-date">
       <label>Date:</label>
       <br>
-      {{input type="date" value=date name="date"}}
+      {{input type="date" value=dateInput name="date" placeholder="xx/xx/xxxx"}}
     </p>
   {{/if}}
   <p class="Admin-form-excerpt">
