--- a/client/app/stylesheets/utilities.css
+++ b/client/app/stylesheets/utilities.css
@@ -15,7 +15,7 @@
 .u-sansSerif {
   font-family: 'outageregular', sans-serif;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   -webkit-font-kerning: normal;
 }
 
