--- a/client/app/stylesheets/elements.css
+++ b/client/app/stylesheets/elements.css
@@ -9,22 +9,20 @@ html {
   font-size: 62.5%;
 }
 body {
-  font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
+  font-family: 'Source Sans Pro', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Geneva, Verdana, sans-serif;
   font-size: 1rem;
   margin: 0;
   padding 0;
 }
-
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'outageregular', sans-serif;
-  font-style: normal;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 700;
   -webkit-font-kerning: normal;
 
   color: #f39f2b; /* yellow */
 }
-h1, h2 {
+h1, h2, h3, h4 {
   margin: 0 0 1rem 0;
-  font-weight: 400;
 }
 h1 {
   font-size: 1.3em;
@@ -34,7 +32,9 @@ h2 {
 }
 h3 {
   font-size: 1.1em;
-  font-weight: 700;
+}
+h4 {
+  color: #0082be;
 }
 h6, small {
   margin: 0;
@@ -48,6 +48,8 @@ p, li, dt, dd {
 }
 small {
   font-family: 'outageregular', sans-serif;
+  font-style: normal;
+  font-weight: 400;
   color: #d2d2d2;
 }
 
@@ -84,9 +86,14 @@ pre {
 }
 
 code {
-  font-family: Consolas, 'Andale Mono', AndaleMono, monospace;
+  font-family: 'Source Code Pro', sans-serif;
+  /*font-family: Consolas, 'Andale Mono', AndaleMono, monospace;*/
   font-size: 1rem;
-  padding: .5rem .25rem .25rem .25rem;
+  padding: .25rem;
+}
+
+pre > code {
+  padding: 0;
 }
 
 @media (min-width: 48em) {
@@ -101,7 +108,6 @@ code {
   }
   h3 {
     font-size: 1.4em;
-    font-weight: 700;
   }
   p, li, dt, dd {
     line-height: 1.8em;
