--- a/client/app/templates/application.hbs
+++ b/client/app/templates/application.hbs
@@ -19,7 +19,7 @@
     </article>
   </main>
 
-  <nav {{bind-attr class=":Blog-nav isTwoColumns:Blog-nav--two-col :u-blackTxt :u-grayBkg :u-offWhiteLtBorder :u-sansSerif"}}>
+  <nav {{bind-attr class=":Blog-nav isTwoColumns:Blog-nav--two-col :u-blackTxt :u-grayBkg :u-offWhiteLtBorder"}}>
     {{render "recent" this}}
     {{partial "links"}}
     {{#if isLoggedIn}}
