--- a/client/app/templates/recent.hbs
+++ b/client/app/templates/recent.hbs
@@ -1,5 +1,5 @@
-<h4 class="u-medGrayText">Recent Posts</h4>
-<ul class="Blog-nav-list">
+<h4 class="u-sansSerif">Recent Posts</h4>
+<ul class="Blog-nav-list u-medGrayText ">
   {{#each model}}
     <li class="Blog-nav-list-item">
       {{#link-to 'post' this}}{{title}}{{/link-to}}
