--- a/client/app/templates/application.hbs
+++ b/client/app/templates/application.hbs
@@ -4,7 +4,7 @@
       <img class="Header-logo" src="http://pixelhandler.com/images/pixelhandler-logo.png">
     {{/link-to}}
     <div class="Header-title u-whiteTxt">
-      {{#link-to 'index'}}Pixelhandler{{/link-to}}
+      {{#link-to 'index'}}Pixelhandler's Blog{{/link-to}}
     </div>
     <div class="Header-subTitle u-medGrayTxt">
       Pushin&apos; &amp; pullin&apos; pixels on the web
